webapp-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-app-dev
  labels:
    name: my-app-dev
