webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  labels:
    app: my-app-deployment
  name: my-app-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app-deployment
  strategy: {}

  template:
    metadata:
      labels:
        app: my-app-deployment

    spec:
      containers:
      - image: my-app-image
        name: my-app-image
        imagePullPolicy: IfNotPresent
        resources: {}
        ports:
          - containerPort: 8000

status: {}
