webapp-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: my-app-svc

spec:
  type: NodePort
  selector:
    app: my-app-deployment
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30001
